Bug 392501 - Volume slider in Elisa does not work
Summary: Volume slider in Elisa does not work
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.0.81
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-29 20:11 UTC by Vishnu Nair
Modified: 2024-04-02 19:12 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vishnu Nair 2018-03-29 20:11:49 UTC
Operating System: Linux (x86_64) release 4.13.0-37-generic
Distribution: KDE Neon User Edition

Tried out Elisa today, Not a system-wide installation running it directly, and everything seemed to be working fine until I tried to lower the volume using the volume slider in Elisa, and it does not change the volume, slider itself works as in it moves freely and I can also see the logs in terminal - 
...
...
qml: volume of player controls changed: 54.29118103852733
qml: volume of player controls changed: 46.72131147540984
...


By the way, loved the interface very clean and simple.
Comment 1 Alexander Stippich 2018-04-07 18:40:15 UTC
Which version did you use? If it was git master could you please retest with the latest version? I recently broke the volume slider in the master branch, but Matthieu fixed it.
Comment 2 Matthieu Gallien 2018-06-25 20:15:08 UTC
Hello,
thanks for your report. Could you check again if you still reproduce this problem with recent builds of Elisa ? You can easily try the flatpak KDE nightly builds (https://community.kde.org/Guidelines_and_HOWTOs/Flatpak).
Comment 3 Adomas 2018-07-06 19:48:07 UTC
Hello,
On version 0.2 which was released earlier today, Volume Slider still does not work. Also clicking Speaker button to mute sound does not work.

OS: Arch x86_64
qml binary version 1.1
built with Qt version 5.11.1
Elisa version: 0.2
Comment 4 Adomas 2018-07-06 20:18:31 UTC
One more thing, noticed this line in Konsole:

Warning: "No volume control found"

This happens every time I change the track.
Comment 5 Matthieu Gallien 2018-09-05 19:43:49 UTC
(In reply to Adomas Jackevičius from comment #3)
> Hello,
> On version 0.2 which was released earlier today, Volume Slider still does
> not work. Also clicking Speaker button to mute sound does not work.
> 
> OS: Arch x86_64
> qml binary version 1.1
> built with Qt version 5.11.1
> Elisa version: 0.2

Hello,
could you please test with a flatpak build ? I believe that this is a packaging problem given that I have never seen that bug with flatpak builds nor windows builds nor builds on my Linux development computer.
Comment 6 Neousr 2018-09-21 16:52:02 UTC
I found on a clean VM using neon both Unstable and User the same behavior. Just to add installing the  gstreamer1.0-plugins-bad package from the repos will make music play and remove the "No volume control found" error on the terminal but the volume slider will continue to do nothing. But the volume will be able to be changed by the audio widget.
Comment 7 Nate Graham 2019-08-05 16:11:38 UTC
Can you try again with the version from git master or KDE Neon unstable or openSUSE Krypton?
Comment 8 Bug Janitor Service 2019-08-20 04:33:10 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 9 Bug Janitor Service 2019-09-04 04:33:13 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 10 piedro 2024-03-19 03:17:46 UTC
On OpenSuse Tumbleweed with all the latest updates and running KDE 6.0.2 I can confirm that in Elisa the volume slider has no effect at all! 

The mute button works though...  

Also (not part of this bug here - but still...!) pausing and un-pausing results in short sound stutters - very unpleasant. 

Neither the non-working volume slider nor the sound stutters on puase/unpause happen with VLC, Deadbeef or other players I tested...
Comment 11 Dirk Tombaugh 2024-03-20 16:51:48 UTC
I can confirm that Elisa volume slider does not work. it will not change the volume. All other media players work correctly. I have tried VLC, goodvibes, cantata, Gnome Music.

Operating System: openSUSE Tumbleweed 20240318
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.9-1-default (64-bit)
Graphics Platform: Wayland
Processors: 8 × AMD FX(tm)-8350 Eight-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: NVC1
Comment 12 Dirk Tombaugh 2024-03-20 16:55:49 UTC
(In reply to Dirk Tombaugh from comment #11)
> I can confirm that Elisa volume slider does not work. it will not change the
> volume. All other media players work correctly. I have tried VLC, goodvibes,
> cantata, Gnome Music.
> 
> Operating System: openSUSE Tumbleweed 20240318
> KDE Plasma Version: 6.0.2
> KDE Frameworks Version: 6.0.0
> Qt Version: 6.6.2
> Kernel Version: 6.7.9-1-default (64-bit)
> Graphics Platform: Wayland
> Processors: 8 × AMD FX(tm)-8350 Eight-Core Processor
> Memory: 15.6 GiB of RAM
> Graphics Processor: NVC1

Forgot to add Elisa version 24.02 (according to the About screen)
Comment 13 Marc 2024-03-22 08:06:57 UTC
I noticed the same issue after upgrading to Plasma 6.

KDE Frameworks 6.0.0
Qt 6.6.2
Wayland
Comment 14 Dirk Tombaugh 2024-03-22 19:53:44 UTC
I did go back to the flatpak version that was available (23.08.4) and it is working.
Comment 15 Bug Janitor Service 2024-04-02 17:22:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/564
Comment 16 Jack Hill 2024-04-02 19:11:22 UTC
Git commit 979a6ea3754c4b60fb05f26b837147cd5ab1264b by Jack Hill.
Committed on 02/04/2024 at 19:06.
Pushed by jackh into branch 'master'.

Fix broken volume slider with Qt Multimedia backend

QAudioOutput::setVolume takes a float from 0 to 1. We were calculating
the volume correctly but then converted it to an integer from 0 to 100 before
passing it to the QAudioOutput.

M  +3    -3    src/audiowrapper_qtmultimedia.cpp

https://invent.kde.org/multimedia/elisa/-/commit/979a6ea3754c4b60fb05f26b837147cd5ab1264b
Comment 17 Jack Hill 2024-04-02 19:12:54 UTC
Git commit 12163b9d1a0bfad327559d5be09a87daa2fef6ed by Jack Hill.
Committed on 02/04/2024 at 19:12.
Pushed by jackh into branch 'release/24.02'.

Fix broken volume slider with Qt Multimedia backend

QAudioOutput::setVolume takes a float from 0 to 1. We were calculating
the volume correctly but then converted it to an integer from 0 to 100 before
passing it to the QAudioOutput.


(cherry picked from commit 979a6ea3754c4b60fb05f26b837147cd5ab1264b)

M  +3    -3    src/audiowrapper_qtmultimedia.cpp

https://invent.kde.org/multimedia/elisa/-/commit/12163b9d1a0bfad327559d5be09a87daa2fef6ed