Fix broken volume slider with Qt Multimedia backend

QAudioOutput::setVolume takes a float from 0 to 1. We were calculating
the volume correctly but then converted it to an integer from 0 to 100 before
passing it to the QAudioOutput.

BUG: 392501


(cherry picked from commit 979a6ea3754c4b60fb05f26b837147cd5ab1264b)